--- a/src/index.css
+++ b/src/index.css
@@ -82,7 +82,7 @@ footer {
 }
 .products li {
   flex: 0 1 24rem;
-  height: 12rem;
+  height: 22rem;
   padding: 1rem;
 }
 .product {
@@ -91,10 +91,10 @@ footer {
   justify-content: space-between;
   height: 100%;
 }
-/* .product img {
+.product img {
   max-width: 37rem;
   max-height: 37rem;
-} */
+} 
 .product-price {
   display: flex;
   justify-content: space-between;
@@ -176,4 +176,22 @@ footer {
 .total > div,
 .total > button {
   flex: 1;
+}
+/* Checkout form */
+form {
+  width: 100%;
+}
+.form-container {
+  width: 100%;
+  padding: 0;
+  list-style-type: none;
+}
+.form-container li {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+input {
+  padding: 1rem;
+  border: 0.1rem #c0c0c0 solid;
 }
