--- a/src/index.css
+++ b/src/index.css
@@ -82,7 +82,7 @@ footer {
 }
 .products li {
   flex: 0 1 24rem;
-  height: 22rem;
+  height: 47rem;
   padding: 1rem;
 }
 .product {
@@ -194,4 +194,26 @@ form {
 input {
   padding: 1rem;
   border: 0.1rem #c0c0c0 solid;
+}
+.order-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+.order-details li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.order-details li div {
+  padding: 10px;
+}
+.order-details .items {
+  text-align: right;
+  padding: 0;
+}
+.success-message {
+  color: green;
 }
