--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,59 @@
+@font-face {
+  font-family: 'Syne Mono', monospace;
+  src: url('https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap');
+}
+
 * {
-  box-sizing: border-box;
-}
-
-body,
-#root {
   margin: 0;
-  height: 100vh;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Syne Mono', monospace;
 }
 
-body,
-input,
-select,
-textarea {
-  font-size: 1.6rem;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+
+a {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+body {
+  background-image: url("./backg-img/background.jpg");
+  background-repeat: repeat;
+ 
+}
+
+header {
+  height: 40px;
+  background-color: rgba(20, 20, 23, alpha);
+  display: flex;
+  align-items: center;
+  border-bottom: 0.1rem #c0c0c0 solid;
+  
+  margin: 16px;
+}
+
+header a:first-child {
+  margin-left: 40px;
+  margin-right: 1300px;
+  width: 90px;
+}
+
+header a:last-child {
+  margin-left: 30px;
+}
+
+header a {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+header a:hover {
+  color: #fbe201;
 }
 
 .app-conatiner {
+  max-width: 1600px;
   display: grid;
   grid-template-areas:
     "header"
@@ -26,57 +63,24 @@ textarea {
   grid-template-columns: 1fr;
   height: 100%;
 }
-
-header {
-  width: 100%;
-  grid-area: header;
-  background-color: black;
-  color: white;
-  display: flex;
-  align-items: center;
-  padding: 1.5rem;
-  position: fixed;
-  z-index: 2;
-}
-
-header a {
-  text-decoration: none;
-  color: white;
-  margin-right: 1.5rem;
-}
-
-header a:hover {
-  color: rgb(179, 139, 100);
-}
-
-main {
-  grid-area: main;
-}
-
 footer {
   grid-area: footer;
-  background-color: black;
+  
   color: white;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.content {
-  display: flex;
-  flex-wrap: wrap;
+main {
+  flex: 4 80%;
+
 }
 
-.main {
-  flex: 4 60rem;
-}
+/* products */
 
-.sidebar {
-  flex: 1 20rem;
-}
-
-/*prod*/
 .products {
+  margin-left: 100px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -86,72 +90,152 @@ footer {
   list-style-type: none;
 }
 .products li {
-  flex: 0 1 40rem;
-  height: 15rem;
-  padding: 1rem;
+  padding: 10px;
+  height: 360px;
+  margin-bottom: 100px;
 }
+
 .product {
-  display: flex;
-  
-  border: solid 1px black;
-  border-radius: 1rem;
-}
-.product img {
-  max-width: 13rem;
-  max-height: 13rem;
-}
-.product-price {
-  font-size: 1rem;
+  max-height: 270px;
+  width: 400px;
+  /* display: flex;
+  justify-content: space-between; */
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
-.product-price div,
-.product-price button {
-  text-align: center;
+.title-p{
+  margin-left: 63px;
+}
+
+.product img {
+  max-width: 450px;
+  max-height: 350px;
+}
+
+.product-price {
+  color: #c0c0c0;
   
 }
-.product-price div {
-  font-size: 1rem;
-}
-.button {
-  width: 2rem;
-  height: 1rem;
-  padding: 1rem;
-  border: 0.1rem #c0c0c0 solid;
-  background-color: #f0f0f0;
-  cursor: pointer;
-}
-.button:hover {
-  border: 0.1rem #808080 solid;
-}
-.button.primary {
-  background-color: black;
-  color: white;
-  /* margin-bottom: 4rem; */
-  width: 10rem;
-}
-.product-botton-container {
-  height: 4rem;
-  margin-top: 10rem;
+
+.product-price p {
+  margin-left: 50px;
 }
 /* Filter */
+
 .filter {
   display: flex;
   justify-content: space-between;
-  padding: 1rem;
-  margin: 1rem;
+  align-items: center;
+  padding: 16px;
+  margin: 16px;
   border-bottom: 0.1rem #c0c0c0 solid;
+  color: #ffffff;
 }
 
-.filter div {
-  flex: 1;
+.big {
+  font-size: 1.2em;
 }
 
-/* Index.css */
+.custom-dropdown {
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 10px; /* demo only */
+}
+
+.custom-dropdown select {
+  cursor: pointer;
+  background-color: #1b1d1fa6;
+  color: #fff;
+  font-size: inherit;
+  padding: 0.5em;
+  padding-right: 2.5em;
+  border: 0;
+  margin: 0;
+  border-radius: 3px;
+  text-indent: 0.01px;
+  text-overflow: "";
+  -webkit-appearance: none;
+  outline: none;
+}
+
+.custom-dropdown::before,
+.custom-dropdown::after {
+  content: "";
+  position: absolute;
+  pointer-events: none;
+}
+
+.custom-dropdown::after {
+  content: "\25BC";
+  height: 1em;
+  font-size: 0.625em;
+  line-height: 1;
+  right: 1.2em;
+  top: 50%;
+  margin-top: -0.5em;
+}
+
+.custom-dropdown::before {
+  width: 2em;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  border-radius: 0 3px 3px 0;
+}
+
+.button {
+  background-color: #1b1d1fa6;
+  color: #fff;
+  border: none;
+  width: 150px;
+  height: 30px;
+  border-radius: 8px;
+}
+.primary{
+  background-color: #1b1d1fa6;
+  color: #fff;
+  border: none;
+  width: 150px;
+  height: 30px;
+  border-radius: 8px;
+}
+
+.button:hover {
+  background-color: #c0c0c0a6;
+}
+
+/* 
+/modal */
+.product-details {
+  
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  max-height: 96vh;
+}
+.product-details img {
+  max-height: 900px;
+  max-width: 46rem;
+  margin: 0 auto;
+}
+.product-details-description {
+  flex:  1;
+  margin: 1rem;
+}
+.close-modal {
+  position: absolute;
+  right: 1rem;
+  top: 2.5rem;
+ 
+}
+/* cart */
 .cart {
   padding: 1rem;
   margin: 1rem;
   display: flex;
+  color: #fff;
 }
 .cart-header {
   border-bottom: 0.1rem #c0c0c0 solid;
@@ -162,8 +246,8 @@ footer {
   list-style-type: none;
 }
 .cart-items img {
-  width: 4rem;
-  height: 5rem;
+  width: 14rem;
+  /* height: 45px; */
 }
 .cart-items li {
   display: flex;
@@ -186,12 +270,8 @@ footer {
 .total > div {
   font-size: 2rem;
 }
-.total > div,
-.total > button {
-  flex: 1;
-}
-/* Checkout form */
-form {
+ /* Checkout form */
+ form {
   width: 100%;
 }
 .form-container {
