--- a/src/index.css
+++ b/src/index.css
@@ -99,7 +99,7 @@ main {
   max-height: 270px;
   width: 400px;
   /* display: flex;
-  justify-cxontent: space-between; */
+  justify-cxontent: sssspace-between; */
   display: flex;
   flex-direction: column;
   align-items: center;
